overflow fix

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -217,6 +217,8 @@ nav{
     font-family: var(--header-font);
     justify-content: space-between;
     padding: 0 10%;
+    overflow: hidden;
+
 }
 nav ul{
     font-family: var(--header-font);
